autobot.log
/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/index.ts(2,32): error TS2307: Cannot find module 'child_process' or its corresponding type declarations.
src/index.ts(3,21): error TS2307: Cannot find module 'fs' or its corresponding type declarations.
src/index.ts(4,23): error TS2307: Cannot find module 'path' or its corresponding type declarations.
src/index.ts(5,24): error TS2307: Cannot find module 'https' or its corresponding type declarations.
src/index.ts(9,17): error TS2591: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
src/index.ts(58,13): error TS7006: Parameter 'res' implicitly has an 'any' type.
src/index.ts(60,29): error TS7006: Parameter 'chunk' implicitly has an 'any' type.
src/index.ts(73,26): error TS7006: Parameter 'e' implicitly has an 'any' type.

    at createTSError (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1892:10)
    at Object.require.extensions.<computed> [as .ts] (/home/aadityansha/git-autobot/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [
    2307, 2307, 2307,
    2307, 2591, 7006,
    7006, 7006
  ]
}
